tests/binary/errors/read_u16_short_buffer.dby
import std.binary as bin

let data: bytes = b"\x01"
print(bin.u16_le(data, 0))
